# TokStudio

./: .gitignore  Cargo.toml  README.md  TokStudio-v0.1.0-arm64.apk.idsig  TokStudio-v0.2.0-arm64.apk.idsig  TokStudio-v0.3.0-arm64.apk.idsig  TokStudio-v0.3.1-arm64.apk.idsig  TokStudio-v0.4.0-arm64.apk.idsig  TokStudio-v0.4.1-arm64.apk.idsig  TokStudio-v0.4.2-arm64.apk.idsig  TokStudio-v0.4.3-arm64.apk.idsig  TokStudio-v0.4.4-arm64.apk.idsig  TokStudio-v0.4.6-arm64.apk.idsig  TokStudio-v0.4.7-arm64.apk.idsig
design/: components.md  design-system.md  navigation.md  screens.md
frontend/: index.html
frontend/css/: animations.css  style.css
frontend/js/: app.js  video-feed.js
mobile/: Cargo.toml  tauri.conf.json
mobile/src/: lib.rs  main.rs
prototype/: index.html
shared/: Cargo.toml
shared/src/: api.rs  lib.rs  models.rs  state.rs  utils.rs
web/: Cargo.toml  index.html
web/src/: app.rs  main.rs
web/src/components/: bottom_nav.rs  mod.rs  video_feed.rs  video_overlay.rs
web/src/pages/: create.rs  discover.rs  home.rs  messages.rs  mod.rs  notifications.rs  profile.rs
