[package]
name = "tokstudio-web"
version = "0.1.0"
edition = "2024"

[dependencies]
tokstudio-shared = { path = "../shared" }
leptos = { version = "0.7", features = ["csr"] }
leptos_router = { version = "0.7" }
leptos_meta = { version = "0.7" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement",
    "TouchEvent", "TouchList", "Touch",
    "HtmlVideoElement", "IntersectionObserver",
    "IntersectionObserverInit", "IntersectionObserverEntry",
    "console",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
